syntax = "proto3";

package assistantdbpb;

message Message {
    int64 msgID = 1;
    string data = 2;
    repeated string keys = 3;
    int64 createTime = 4;
    int64 updateTime = 5;
}

message AssistantData {
    int64 maxMsgID = 1;
    repeated string keys = 2;
}