syntax = "proto3";

package pluginjarvisnodeexpb;

message FileData {
    // filename - filename
    string filename = 1;
    // data - file data with bytes
    bytes data = 2;
    // fileType - file type
    string fileType = 3;
    // fullPath - full path
    string fullPath = 4;
}

// RunScriptCommand - run script command
message RunScriptCommand {
    // jarvisNodeName - jarvisnode name
    string jarvisNodeName = 1;
    // destGlobPatterns - when finished script, will get these files.
    repeated string destGlobPatterns = 2;
    // scriptFile - script file
    FileData scriptFile = 3;
    // files - files
    repeated FileData files = 4;
}

// PluginData - plugin data
message PluginData {
    RunScriptCommand runScript = 1;
}

// UpdNodesCommand - updnodes command
message UpdNodesCommand {
    // nodeType - jarvisnode type name
    string nodeType = 1;
    // nodeTypeVer - new version
    string nodeTypeVer = 2;
    // isOnlyRestart - restart node
    bool isOnlyRestart = 3;
}